Bug 117323 - Assertion failure when opening file open dialog
Summary: Assertion failure when opening file open dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: David Tardon
URL:
Whiteboard: target:6.1.0
Keywords:
: 117407 (view as bug list)
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2018-04-28 21:00 UTC by Gabor Kelemen (Collabora)
Modified: 2018-05-04 05:49 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2018-04-28 21:00:53 UTC
In a current master build with debug mode, I get these warnings on startup:

warn:legacy.osl:940:940:filter/source/config/cache/filtercache.cxx:1197: Warning	:	The type "calc_MS_Multiplan" does not contain any URL pattern nor any extensions.

warn:legacy.osl:940:940:filter/source/config/cache/filtercache.cxx:1197: Warning	:	The type "calc_MS_Multiplan" does not contain any URL pattern nor any extensions.

warn:legacy.osl:940:940:filter/source/config/cache/filtercache.cxx:1197: Warning	:	The type "calc_MS_Multiplan" does not contain any URL pattern nor any extensions.

warn:legacy.osl:940:940:filter/source/config/cache/filtercache.cxx:1197: Warning	:	The type "calc_MS_Multiplan" does not contain any URL pattern nor any extensions.

Then trying to open the File open dialog, LO crashes on this assertion:

warn:sfx.dialog:940:940:sfx2/source/dialog/filtergrouping.cxx:355: already have an element for WordPerfect
warn:sfx.dialog:940:940:sfx2/source/dialog/filtergrouping.cxx:355: already have an element for writerweb8_writer_template
warn:sfx.dialog:940:940:sfx2/source/dialog/filtergrouping.cxx:355: already have an element for writerglobal8
warn:legacy.tools:940:940:sfx2/source/dialog/filtergrouping.cxx:466: AppendWildcardToDescriptor::AppendWildcardToDescriptor: invalid wildcard!
soffice.bin: /home/gabor/src/core/include/rtl/ustring.hxx:669: sal_Unicode rtl::OUString::operator[](sal_Int32) const: Assertion `index >= 0 && static_cast<sal_uInt32>(index) < static_cast<sal_uInt32>(getLength())' failed.

calc_MS_Multiplan was added with the new libwps version, CC'ing dtardon:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=9739749ba8da87001b73027136f120ef532f0b2b

Version: 6.1.0.0.alpha1+
Build ID: af1c5b959462bc7dcd675c6298ca69c69f33bd52
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: hu-HU (hu_HU.UTF-8); Calc: group
Comment 1 Commit Notification 2018-04-30 11:17:42 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e0958329000ac04601ceed964fc9fe6559649503

tdf#117323 add dummy extension to fix assertion

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2018-05-01 05:59:29 UTC
osnola committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d324ed83fa6941f5408402d7ab0ec65f5c18d1d2

tdf#117323 fix import of MS Multiplan for DOS

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Aron Budea 2018-05-02 17:48:27 UTC
I have a fresh master build (f154f63cb662f02415d5cb0051011bdb5d0d523c), and am still running into this assert. What could still be wrong?
Comment 4 Gabor Kelemen (Collabora) 2018-05-02 19:39:41 UTC
Reopening, I see it too, with the same console output as in comment#0

The second commit reverted the dummy extension and brought the assertion error back.
Comment 5 Aron Budea 2018-05-03 12:14:18 UTC
*** Bug 117407 has been marked as a duplicate of this bug. ***
Comment 6 Regina Henschel 2018-05-03 14:12:19 UTC
A file name extension is missing in /filter/source/config/fragments/types/calc_MS_Multiplan.xcu
Patch is in Gerrit https://gerrit.libreoffice.org/53797
Comment 7 Regina Henschel 2018-05-03 21:02:16 UTC
I have found several sites, which mention .mp as extension for Multiplan files. The extension .col seems to be used too. But Multiplan is really old, so I'm not sure whether the non-DOS versions use a file extension at all.

https://www.file-extensions.org/mp-file-extension-microsoft-multiplan-file
http://dotwhat.net/file/extension/mp/1126
http://www.filefacts.net/de/category-34-spreadsheet-files

The assertion fails, because the string, which should contain the file name extension, is empty.

@David: Should ".col" be added?
Or are you currently going to change the code, that a file name extension is no longer expected?
Comment 8 David Tardon 2018-05-04 05:46:23 UTC
https://www.file-extensions.org/multiplan-file-extensions claims that .col and .mod were used for spreadsheet files. .mp is only mentioned as unspecified data file. Of course, we don't know how accurate the info is...
Comment 9 Commit Notification 2018-05-04 05:49:36 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=36ca18f70ee0bf9541bc0105c85f0a68f088c92b

tdf#117323 Add file name extension mp for Multiplan

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.