tdf#117323 fix import of MS Multiplan for DOS

Change-Id: Ica053852c17ac993b4e50c4c58dbaf2ee4f33035